fix: navbar fixed position mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,5 +1,5 @@
 .nav {
-  opacity: 70%;
+  opacity: 95%;
 }
 
 .navbar {
@@ -69,6 +69,9 @@
     background: #3e6cca;
     display: flex;
     height: 110px;
+    width: 100%;
+    position: fixed;
+    z-index: 40;
   }
 
 
@@ -97,6 +100,7 @@
 
   .navbarmobile:active {
     background-color: #437ef6;
+
   }
 
 
@@ -119,6 +123,10 @@
 
   #myButton {
     padding: 14px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    border: 0.5px solid #fafafa;
   }
 
   #navbarText {
